수정: 이미지

--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
                 <div class="parallax_image"></div>
                 <div class="pink-background parallax_image">
                     <div class="left"></div>
-                    <img class="center" src="/image/layer8.png">
+                    <!-- <img class="center" src="/image/layer8.png"> -->
+                    <div class="center"></div>
                     <div class="right"></div>
                 </div>
                 <!-- <div class="parallax_image"></div> -->
